<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator_app_text"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/calculator_image_source"
        android:src="@drawable/calculator_icon"
        android:layout_gravity="center"
        android:scaleType="fitXY"/>

    <EditText
        android:id="@+id/num1EditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="num1"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_first_number_text_field" />

    <EditText
        android:id="@+id/num2EditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="num2"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_second_number_text_field" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/plusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus_btn_text" />

        <Button
            android:id="@+id/minusBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus_btn_text" />

        <Button
            android:id="@+id/productBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product_btn_text" />

        <Button
            android:id="@+id/divideBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/divide_btn_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/result_text"
        android:gravity="center"/>

</LinearLayout>